[package]
name = "axolotl"
version = "2.0.3"
edition = "2021"
description = """\
This is a cross-platform Signal client."""
license = "GPL-3"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [], optional = true }

[dependencies]
tauri = { version = "2.1.1", features = [], optional = true }
presage = { git = "https://github.com/nanu-c/presage", rev = "350921c533224265a0ff026dfddc67419ca45b7a" }
presage-store-sled = { git = "https://github.com/nanu-c/presage", rev = "350921c533224265a0ff026dfddc67419ca45b7a" }
#presage = {path = "../presage/presage"}
#presage-store-sled = { path = "../presage/presage-store-sled" }
zeroize = { version = "1.8.1", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
hex = "0.4"
warp = "0.3"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
env_logger = "0.11.6"
url = "2.5.4"
sled = "0.34.7"
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
notify-rust = { version = "4.11.3", optional = true }
data-url = "0.3.1"

dbus = { version = "0.9", optional = true }

[patch.crates-io]
"curve25519-dalek" = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
default = ["dep:notify-rust"]
custom-protocol = ["tauri/custom-protocol"]
tauri = ["dep:tauri", "dep:notify-rust", "custom-protocol"]
ut = ["dep:dbus"]
# Use this feature to debug registration issues on test servers
staging-servers = []


[[example]]
name = "dump_db"
path = "examples/dump/dump_db.rs"
