[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs.git", features = ["unsend-futures"] }
libsignal-service-actix = { git = "https://github.com/whisperfish/libsignal-service-rs.git" }

awc = { version = "3.0.0-beta.5", features=["rustls"] }
actix = "0.11.1"
actix-http = "3.0.0-beta.6"
actix-rt = "2.0"
mpart-async = "0.5.0"
serde_json = "1.0"
futures = "0.3"
bytes = "1"
rustls = "0.19"
url = "2.1"
serde = "1.0"
log = "0.4"
rand = "0.7"

failure = "0.1.5"
thiserror = "1.0"
async-trait = "0.1.30"
base64 = "0.13"

phonenumber = "0.3"
structopt = "0.3"

env_logger = "0.8"
image = { version = "0.23", default-features = false, features = ["png"] }
opener = "0.4"
qrcode = "0.12"
tokio = { version = "1", features=["macros"] }
