[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs.git", features = ["unsend-futures"], rev = "34b9e43" }
libsignal-service-actix = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "34b9e43" }

futures = "0.3"
rand = "0.7"
phonenumber = "0.3"
tokio = { version= "1", features = ["full"] }
warp = "0.3"
