[package]
name = "crayfish"
version = "0.1.0"
edition = "2018"

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "34b9e43" }
libsignal-service-hyper = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "34b9e43" }

futures = "0.3"
rand = "0.7"
phonenumber = "0.3"
tokio = { version= "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_json = "1.0"
serde-big-array = { version="0.3.2", features = ["const-generics"] }
serde_str = "0.1.0"

[dev-dependencies]
cross = "0.2.1"
