[package]
name = "crayfish"
version = "0.1.0"
edition = "2018"

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "34b9e43" }
libsignal-service-hyper = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "34b9e43" }

actix-threadpool = "0.3"
aes = "0.7"
anyhow = "1.0"
async-trait = "0.1"
block-modes = "0.8"
dirs = "3.0"
failure = "0.1.8"
futures = "0.3"
log = "0.4.8"
phonenumber = "0.3"
prost = "0.8"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
serde-big-array = { version="0.3.2", features = ["const-generics"] }
serde_str = "0.1.0"
serde_yaml = "0.8"
tokio = { version= "1", features = ["full"] }
warp = "0.3"

hmac = "0.11.0"
sha2 = "0.9.0"
pbkdf2 = { version = "0.8.0", default-features = false }
sha-1 = "0.9.0"

[build-dependencies]
cpp_build = "0.5"
cc = "1.0"
failure = "0.1.6"
dotenv = "0.15"
regex = "1.3.9"
prost-build = "0.8"
vergen = "5"
version_check = "0.9"
